; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_bookmark_destroy.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_dsl_bookmark.c_dsl_bookmark_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32*, i32* }

@dsl_bookmark_destroy_check = common dso_local global i32 0, align 4
@dsl_bookmark_destroy_sync = common dso_local global i32 0, align 4
@ZFS_SPACE_CHECK_RESERVED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dsl_bookmark_destroy(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = call i32* @nvlist_next_nvpair(i32* %9, i32* null)
  store i32* %10, i32** %8, align 8
  %11 = load i32*, i32** %8, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %14

13:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %33

14:                                               ; preds = %2
  %15 = load i32*, i32** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 2
  store i32* %15, i32** %16, align 8
  %17 = load i32*, i32** %5, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  store i32* %17, i32** %18, align 8
  %19 = call i32 (...) @fnvlist_alloc()
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i32 %19, i32* %20, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = call i32 @nvpair_name(i32* %21)
  %23 = load i32, i32* @dsl_bookmark_destroy_check, align 4
  %24 = load i32, i32* @dsl_bookmark_destroy_sync, align 4
  %25 = load i32*, i32** %4, align 8
  %26 = call i32 @fnvlist_num_pairs(i32* %25)
  %27 = load i32, i32* @ZFS_SPACE_CHECK_RESERVED, align 4
  %28 = call i32 @dsl_sync_task(i32 %22, i32 %23, i32 %24, %struct.TYPE_3__* %7, i32 %26, i32 %27)
  store i32 %28, i32* %6, align 4
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = call i32 @fnvlist_free(i32 %30)
  %32 = load i32, i32* %6, align 4
  store i32 %32, i32* %3, align 4
  br label %33

33:                                               ; preds = %14, %13
  %34 = load i32, i32* %3, align 4
  ret i32 %34
}

declare dso_local i32* @nvlist_next_nvpair(i32*, i32*) #1

declare dso_local i32 @fnvlist_alloc(...) #1

declare dso_local i32 @dsl_sync_task(i32, i32, i32, %struct.TYPE_3__*, i32, i32) #1

declare dso_local i32 @nvpair_name(i32*) #1

declare dso_local i32 @fnvlist_num_pairs(i32*) #1

declare dso_local i32 @fnvlist_free(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
